apps/plane/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: plane-http
spec:
  hosts:
    - plane.home.alden.ai
  gateways:
    - istio-system/default-https-gateway
  http:
    - route:
        - destination:
            host: plane-api
            port:
              number: 8000
      match:
        - uri:
            prefix: /api
    - route:
        - destination:
            host: plane-api
            port:
              number: 8000
      match:
        - uri:
            prefix: /auth
    - route:
        - destination:
            host: plane-live
            port:
              number: 3000
      match:
        - uri:
            prefix: /live/
    - route:
        - destination:
            host: plane-space
            port:
              number: 3000
      match:
        - uri:
            prefix: /spaces
    - route:
        - destination:
            host: plane-admin
            port:
              number: 3000
      match:
        - uri:
            prefix: /god-mode
    - route:
        - destination:
            host: plane-web
            port:
              number: 3000
      match:
        - uri:
            prefix: /
